--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,19 +2,23 @@ cmake_minimum_required(VERSION 3.13)
 cmake_policy(SET CMP0074 NEW)
 project(TreeAnalysis)
 
-set(PCL_DIR "D:/ku_3rdPart/PCL_1.14.1/cmake") 
+set(PCL_DIR "D:/ku_3rdPart/PCL_1.14.1/cmake")
 set(OPENNI2_INCLUDE_DIRS "D:/ku_3rdPart/PCL_1.14.1/3rdParty/OpenNI2/Include")
 set(OPENNI2_LIBRARIES "D:/ku_3rdPart/PCL_1.14.1/3rdParty/OpenNI2/Lib/OpenNI2.lib")
 set(QHULL_INCLUDE_DIR "D:/ku_3rdPart/PCL_1.14.1/3rdParty/Qhull/include")
 set(PDAL_DIR "D:/ku_3rdPart/PCL_1.14.1/3rdParty/PDAL/lib/cmake/PDAL")
+set(OPENCV_DIR "D:/ku_3rdPart/opencv/build")
+set(OPENCV_INCLUDE_DIRS "D:/ku_3rdPart/opencv/build/include")
+set(OPENCV_LIBRARIES "D:/ku_3rdPart/opencv/build/x64/vc16/lib/opencv_world500.lib")
 
 find_package(PCL REQUIRED)
 find_package(PDAL REQUIRED)
+find_package(OpenCV REQUIRED)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 add_definitions(-DNOMINMAX)
 
 add_executable(TreeAnalysis main.cpp)
 
-target_include_directories(TreeAnalysis PRIVATE ${PCL_INCLUDE_DIRS} ${PDAL_INCLUDE_DIRS})
-target_link_libraries(TreeAnalysis ${PCL_LIBRARIES} ${PDAL_LIBRARIES})
+target_include_directories(TreeAnalysis PRIVATE ${PCL_INCLUDE_DIRS} ${PDAL_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS})
+target_link_libraries(TreeAnalysis ${PCL_LIBRARIES} ${PDAL_LIBRARIES} ${OPENCV_LIBRARIES})
